methods.picture.MethodsPictureLarge.scala.error
Erreur de compilation :
MethodsPictureLarge:109: error: not found: value colonne
  colonne(rouge);
  ^